fixing package json

--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "test-watch": "karma",
     "build": "webpack",
     "build-watch": "webpack-dev-server --inline --hot",
-    "engines": {
-      "node": "4.4.7"
-    },
+    "engines": { "node": "4.4.7" },
     "start": "node server.js",
     "heroku-postbuild": "webpack -p --progress"
   },
